qglviewer and observer tutorial

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include/Defs")
 option(BUILD_TUTORIAL "Build PUT SLAM libraries" YES)
 option(BUILD_TUTORIAL_DEFS "Build TUTORIAL Defs library" YES)
 mark_as_advanced(BUILD_TUTORIAL_DEFS)
+option(BUILD_TUTORIAL_UTILITIES "Build TUTORIAL Utilities library" ON)
+mark_as_advanced(BUILD_TUTORIAL_UTILITIES)
 option(BUILD_TUTORIAL_GRABBER "Build TUTORIAL Grabber library" YES)
 mark_as_advanced(BUILD_TUTORIAL_GRABBER)
 option(BUILD_TUTORIAL_VISUALIZER "Build TUTORIAL visualizer library" YES)
@@ -33,6 +35,10 @@ option(BUILD_TUTORIAL_DEMO_GRABBER "Build grabber test" YES)
 mark_as_advanced(BUILD_TUTORIAL_DEMO_GRABBER)
 option(BUILD_TUTORIAL_DEMO_OPENCV "Build opencv test" YES)
 mark_as_advanced(BUILD_TUTORIAL_DEMO_OPENCV)
+option(BUILD_TUTORIAL_DEMO_QVISUALIZER "Build QGLVisualizer test" YES)
+mark_as_advanced(BUILD_TUTORIAL_DEMO_QVISUALIZER)
+
+LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules)
 
 #additional dependencies
 # Boost
@@ -55,6 +61,18 @@ add_definitions(-DEIGEN_DONT_VECTORIZE -DEIGEN_DISABLE_UNALIGNED_ARRAY_ASSERT)
 # OpenCV
 FIND_PACKAGE(OpenCV REQUIRED)
 include_directories( ${OpenCV_INCLUDE_DIRS} )
+
+#QGLViewer library
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
+FIND_PACKAGE(OpenGL)
+include_directories(${OPENGL_INCLUDE_DIR})
+link_directories(${OPENGL_LIBRARY})
+
+#QGLViewer library
+FIND_PACKAGE(QGLViewer)
+include_directories(${QGLVIEWER_INCLUDE_DIR})
+include_directories(${QT_INCLUDES})
+link_directories(${QGLVIEWER_LIBRARY})
 
 # Executable output directory
 SET(RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build/bin${OUTPUT_DIRECTORY_POSTFIX} CACHE PATH "Executable output directory")
@@ -106,7 +124,26 @@ if(BUILD_TUTORIAL AND BUILD_TUTORIAL_DEFS)
 # 	INSTALL(TARGETS PUTSLAMDefs RUNTIME DESTINATION bin LIBRARY DESTINATION bin ARCHIVE DESTINATION lib)
         INSTALL(FILES ${DEFS_HEADERS} DESTINATION include/Defs/)
 
-endif(BUILD_PUTSLAM AND BUILD_PUTSLAM_DEFS)
+endif(BUILD_TUTORIAL AND BUILD_TUTORIAL_DEFS)
+
+###############################################################################
+#
+# PUTSLAM Utilities library
+#
+###############################################################################
+
+if(BUILD_TUTORIAL AND BUILD_TUTORIAL_UTILITIES)
+        file(GLOB UTILITIES_SOURCES
+            "${CMAKE_SOURCE_DIR}/src/Utilities/*.cpp"
+        )
+        file(GLOB UTILITIES_HEADERS
+            "${CMAKE_SOURCE_DIR}/include/Utilities/*.h"
+        )
+
+        ADD_LIBRARY(Utilities STATIC ${UTILITIES_SOURCES} ${UTILITIES_HEADERS})
+        INSTALL(TARGETS Utilities RUNTIME DESTINATION bin LIBRARY DESTINATION bin ARCHIVE DESTINATION lib)
+        INSTALL(FILES ${TRACKER_HEADERS} DESTINATION include/putslam/Utilities/)
+endif(BUILD_TUTORIAL AND BUILD_TUTORIAL_UTILITIES)
 
 ###############################################################################
 #
@@ -123,7 +160,7 @@ if(BUILD_TUTORIAL AND BUILD_TUTORIAL_GRABBER)
         )
 
         ADD_LIBRARY(Grabber STATIC ${GRABBER_SOURCES} ${GRABBER_HEADERS})
-        TARGET_LINK_LIBRARIES(Grabber)
+        TARGET_LINK_LIBRARIES(Grabber Utilities)
         INSTALL(TARGETS Grabber RUNTIME DESTINATION bin LIBRARY DESTINATION bin ARCHIVE DESTINATION lib)
         INSTALL(FILES ${GRABBER_HEADERS} GRABBERKINECT_HEADERS DESTINATION include/TUTORIAL/Grabber/)
 endif(BUILD_TUTORIAL AND BUILD_TUTORIAL_GRABBER)
@@ -142,7 +179,7 @@ if(BUILD_TUTORIAL AND BUILD_TUTORIAL_VISUALIZER)
             "${CMAKE_SOURCE_DIR}/include/Visualizer/*.h"
         )
         ADD_LIBRARY(Visualizer STATIC ${VISUALIZER_SOURCES} ${VISUALIZER_HEADERS})
-		TARGET_LINK_LIBRARIES(Visualizer)
+                TARGET_LINK_LIBRARIES(Visualizer Utilities ${QGLVIEWER_LIBRARY} ${QT_LIBRARIES} QtCore QtXml QtOpenGL QtGui ${OPENGL_LIBRARY})
         INSTALL(TARGETS Visualizer RUNTIME DESTINATION bin LIBRARY DESTINATION bin ARCHIVE DESTINATION lib)
         INSTALL(FILES ${VISUALIZER_HEADERS} DESTINATION include/putslam/Visualizer/)
 endif(BUILD_TUTORIAL AND BUILD_TUTORIAL_VISUALIZER)
@@ -206,3 +243,22 @@ if(BUILD_TUTORIAL_DEMO AND BUILD_TUTORIAL_DEMO_OPENCV)
         INSTALL(FILES ${DEMO_FILES} DESTINATION bin)
 
 endif(BUILD_TUTORIAL_DEMO AND BUILD_TUTORIAL_DEMO_OPENCV)
+
+###############################################################################
+#
+# TUTORIAL DEMO QVisualizer
+#
+###############################################################################
+
+if(BUILD_TUTORIAL_DEMO AND BUILD_TUTORIAL_DEMO_QVISUALIZER)
+
+        SET(DEMO_FILES
+                ${PROJECT_ROOT}/resources/configGlobal.xml
+        )
+        SET(DEMO_SOURCES ./demo_qvisualizer.cpp)
+        ADD_EXECUTABLE(demoQVisualizer ${DEMO_SOURCES})
+        TARGET_LINK_LIBRARIES(demoQVisualizer tinyxml2 Visualizer Grabber ${QGLVIEWER_LIBRARY} ${QT_LIBRARIES} ${OPENGL_LIBRARY} glut)
+        INSTALL(TARGETS demoOpenCV RUNTIME DESTINATION bin)
+        INSTALL(FILES ${DEMO_FILES} DESTINATION bin)
+
+endif(BUILD_TUTORIAL_DEMO AND BUILD_TUTORIAL_DEMO_QVISUALIZER)
